<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">CityZen</string>
    <string name="app_logo" translatable="false">CityZen logo</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_map">Map</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_about">About</string>
    <string name="oauth_communication_error">"Unable to reach the authorization server"</string>
    <string name="loading">"Loading"</string>
    <string name="retry">"Retry"</string>
    <string name="oauth_failed_permissions">Authorization failed: all listed permissions need to be granted</string>
    <string name="offline">"You are offline"</string>
    <string name="confirmation_authorize_now">"You need to login with your OSM user account to apply changes to OpenStreetMap. Authorize now?"</string>
    <string name="later">"Later"</string>
    <string name="filter">Filter</string>
    <string name="only_currently_opened">Only currently opened</string>
    <!--Permission Request-->
    <string name="write_storage_request">CityZen needs to have write permissions to provide map services</string>
    <string name="write_storage_request_toast">CityZen must have written permissions to provide map services</string>
    <string name="location_request">CityZen needs to have location to provide map services</string>
    <string name="location_request_toast">CityZen must have location to provide map services</string>
    <string name="allow_permission">Allow</string>
    <string name="deny_permission">Deny</string>
    <string name="no_pois_near_user_location">No services found near your location</string>
    <string name="enable_gps_to_continue">Can\'t find your location. \nEnable GPS to continue</string>
    <string name="calculating_device_location">We are figuring out your location. \nPlease wait.</string>
    <string name="add_new_poi_toast">Click on the map to add \n Points of Interest</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="wifi">Wifi</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="opening_hours">Opening hours</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="all_week_days">All</string>
    <string name="enable">Enable</string>
    <string name="osm_copyright" translatable="false"><![CDATA[<font color=\"#000\">© </font><font color=\"#1565C0\">OpenStreetMap </font><font color=\"#000\">contributors</font>]]></string>
    <string name="directions_to_here">directions by car</string>
    <string name="create_poi">Create POI</string>
    <string name="_24_7">24/7</string>
    <string name="opening">Opening</string>
    <string name="closing">Closing</string>
    <string name="done">Done</string>
    <string name="no_internet_to_update_poi">No internet access. Connect to internet to continue</string>
    <string name="session_expired_toast">Your session expired. Please log in to continue</string>
    <string name="internet_access">Internet access</string>
    <string name="edit">Edit</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="add_closing_hours">Add closing hours</string>
    <string name="add_opening_hours">Add opening hours</string>
    <string name="not_valid_website">Not a valid website</string>
    <string name="not_valid_email">Not a valid email</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="updated_successfully">updated successfully</string>
    <string name="editing_is_not_possible">Editing is not possible for</string>
    <string name="poi_type">Point of interest type</string>
    <string name="select_amenity_type">Select amenity type</string>
    <string name="select_amenity_type_to_continue">Select amenity type to continue</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wired">Wired</string>
    <string name="wlan">Wi-Fi</string>
    <string name="created_succesfully">created successfully</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="add_a_new_marker_on_the_map">Add a marker on the map</string>
    <string name="about_us">About the project</string>
    <string name="about_text">CityZen is an open source Android app that helps you navigate and explore the city easily.
        With CityZen you find points of interest (POIs) such as ATMs, gas stations, drugstores, mobile phone stores and other interesting services near you. The app shows these POIs based on your location of your smartphone, but it does so by respecting your privacy since we don’t keep your navigation data.
The app is open source licensed because we want the project to be empowered by the community for the community. We initiated this project as a way of empowering tools and platforms such as OpenStreetMap that respect our freedoms. If you are an OpenStreetMap contributor you can easily add information to the POIs by editing them inside CityZen.</string>
    <string name="domain" translatable="false">www.cityzenapp.co</string>
    <string name="license_link" translatable="false">www.cityzenapp.co/license</string>
    <string name="privacy_policy_link" translatable="false">www.cityzenapp.co/app-privacy-policy</string>
    <string name="email_contact" translatable="false">ping@cityzenapp.co</string>
    <string name="license">License</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact">Contact</string>
    <string name="alert_message">CityZen needs your location to provide map services. Do you want to enable location?</string>
    <string name="osm_routing_unavailable">OSM routing isn\'t available at this time. Try again later</string>
    <string name="house_number">House number</string>
    <string name="postcode">Postcode</string>
    <string name="get_involved">Get involved</string>
    <string name="get_involved_link" translatable="false">www.github.com/CityZenApp</string>
    <string name="credits">Credits</string>
    <string name="credits_link" translatable="false">www.cityzenapp.co/credits/</string>
    <string name="open_source_culture">CityZen app was initiated in Albania with a lot of ♥\n for free and open source culture.</string>
    <!--POI List-->
    <string name="Cafes">Cafes</string>
    <string name="Bars_Clubs">Bars</string>
    <string name="Restaurants">Restaurants</string>
    <string name="Bakeries">Bakeries &amp; Pastries</string>
    <string name="Post_Offices">Post offices</string>
    <string name="FastFood">Fast food</string>
    <string name="Tourism">Tourism</string>
    <string name="Hotels_Hostels">Hotels</string>
    <string name="Transportation">Transportation</string>
    <string name="GasStations">Gas stations</string>
    <string name="Pharmacy_Healthcare">Health services</string>
    <string name="Banks_ATMs_Exchange">Financial services</string>
    <string name="MobilePhoneStore">Mobile stores</string>
    <string name="Markets_Kiosks">Markets</string>
    <string name="Shopping_Malls">Shopping</string>
    <string name="Parking">Parking</string>
    <string name="RentBicycle">Bike rental</string>
    <string name="RentCar_CareSharing">Car rental</string>
    <string name="Buildings">Buildings</string>
    <string name="Education">Education</string>
    <string name="Location">Location</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="login_to_osm">Log in to OSM</string>
    <string name="logout">Log out</string>
    <!--Search List-->
    <string name="no_results">No results</string>
    <string name="search_again">Please try another search term</string>
    <string name="search_icon">search icon</string>
    <!--Favorites List-->
    <string name="no_favorites">No favorites</string>
    <string name="mark_locations_as_favorites">Locations marked as favorites will show up here</string>
    <string name="favorites_icon">favorites icon</string>
    <!-- Opening hours display -->
    <string name="no_info_available">No information available</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <!-- FAB -->
    <string name="search">Search</string>
    <string name="my_location">My location</string>
    <string name="clear_map">Clear map</string>
    <string name="search_hint">Search…</string>
    <string name="address_label">Address:</string>
    <string name="empty_timestamp" translatable="false">--:--</string>
    <string name="server_error">Error communicating with server</string>
    <string name="server_response_error">Error reading server response</string>
    <string name="poi_details_close">Close POI</string>
    <string name="poi_details_mark_as_favorite">Mark POI as favorite</string>
    <string name="poi_details_edit">Edit POI</string>
    <string name="poi_details_share">Share POI as geo-link</string>
</resources>