<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cityzen.cityzen.Fragments.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/searchToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:foregroundGravity="right"
            android:gravity="right">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:accessibilityLiveRegion="polite"
                android:textDirection="firstStrong"
                app:closeIcon="@drawable/ic_close_white"
                app:defaultQueryHint="@string/search_hint"
                app:searchIcon="@drawable/ic_search">

            </androidx.appcompat.widget.SearchView>
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/filterPoiListContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchToolbar"
        android:background="@color/colorPrimary"
        android:foregroundGravity="center"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/filterCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:foreground="@color/colorWhite"
            android:foregroundGravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:text="@string/only_currently_opened"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:buttonTint="@color/colorWhite" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/filterPoiListContainer"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWhite"/>

    <LinearLayout
        android:id="@+id/emptySearchResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:contentDescription="@string/search_icon"
            android:layout_width="92dp"
            android:layout_height="92dp"
            app:srcCompat="@drawable/magnify"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="26sp"
            android:text="@string/no_results"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/search_again"/>
    </LinearLayout>

</RelativeLayout>
